# cat-lock

./: Cargo.toml  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yml
src/: hotkey.rs  i18n.rs  lock_controller.rs  logging.rs  main.rs  notify.rs  settings.rs  tray.rs
src/platform/: mod.rs  slint_overlay.rs
src/platform/linux/: input_grab.rs  mod.rs  overlay.rs  pawsense.rs  power.rs
src/platform/windows/: input_hook.rs  mod.rs  overlay.rs  pawsense.rs  power.rs
