[package]
name = "catlock"
version = "1.0.0"
edition = "2021"
authors = ["Prasanna"]
description = "CatLock — A lightweight system tray app that locks your keyboard and mouse to prevent accidental input from cats, kids, or cleaning. Cross-platform for Windows and Linux."
license = "GPL-3.0"
readme = "README.md"

[dependencies]
tray-icon = "0.19"
global-hotkey = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = "0.4"
fern = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
image = { version = "0.24", default-features = false, features = ["png"] }
x11rb = "0.13"
notify-rust = "4.18.0"
slint = "1.17.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_Security",
    "Win32_System_Console",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
zbus = "4"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "catlock"
path = "src/main.rs"
